syntax = "proto3";
option go_package = "pb";


import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Message {
    MessageType messageType     = 1;
    google.protobuf.Any payload = 2;
    int32 requestId             = 3; // optional
    bool isResponse             = 4; // optional

    enum MessageType {
        PING                    = 0;
        CHAT                    = 1;
        FOLLOW                  = 2;
        UNFOLLOW                = 3;
        ORDER                   = 4;
        ORDER_REJECT            = 5;
        ORDER_CANCEL            = 6;
        ORDER_CONFIRMATION      = 7;
        ORDER_FULFILLMENT       = 8;
        ORDER_COMPLETION        = 9;
        DISPUTE_OPEN            = 10;
        DISPUTE_UPDATE          = 11;
        DISPUTE_CLOSE           = 12;
        REFUND                  = 13;
        OFFLINE_ACK             = 14;
        OFFLINE_RELAY           = 15;
        MODERATOR_ADD           = 16;
        MODERATOR_REMOVE        = 17;
        STORE                   = 18;
        BLOCK                   = 19;
        ERROR                   = 500;
    }
}

message Envelope {
    Message message = 1;
    bytes pubkey    = 2;
    bytes signature = 3;
}

message Chat  {
    string messageId                    = 1;
    string subject                      = 2;
    string message                      = 3;
    google.protobuf.Timestamp timestamp = 4;
    Flag flag                           = 5;

    enum Flag {
        MESSAGE = 0;
        TYPING  = 1;
        READ    = 2;
    }
}

message SignedData {
    bytes senderPubkey        = 1;
    bytes serializedData      = 2;
    bytes signature           = 3;

    message Command {
        string peerID                       = 1;
        Message.MessageType type            = 2;
        google.protobuf.Timestamp timestamp = 3;
    }
}

message CidList {
    repeated string cids = 1;
}

message Block {
    bytes rawData = 1;
    string cid    = 2;
}

message Error {
    uint32 code         = 1;
    string errorMessage = 2;
    string orderID      = 3;
}